Final Ones_Organised/Cilium/cilium-network-policy.yaml

#Cilium Network policy attached to jenkins namespace
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: jenkins  
spec:
  endpointSelector:
    matchLabels:
      app: my-app
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: "jenkins"
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: "jenkins"
